--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@radix-ui/react-tooltip": "^1.1.6",
 		"@tanstack/react-query": "^5.62.12",
-		"@tanstack/react-query-devtools": "^5.62.12",
 		"@tanstack/react-table": "^8.20.6",
 		"@tanstack/react-virtual": "^3.11.2",
 		"babel-plugin-react-compiler": "19.0.0-beta-27714ef-20250124",
@@ -38,6 +37,8 @@
 		"cmdk": "^1.0.4",
 		"date-fns": "^3.6.0",
 		"lucide-react": "^0.469.0",
+		"mongodb": "^6.13.0",
+		"mongoose": "^8.10.1",
 		"next": "15.1.3",
 		"next-plausible": "^3.12.4",
 		"next-themes": "^0.4.4",
@@ -60,5 +61,10 @@
 		"postcss": "^8",
 		"tailwindcss": "^3.4.17",
 		"typescript": "^5"
+	},
+	"pnpm": {
+		"ignoredBuiltDependencies": [
+			"sharp"
+		]
 	}
 }
