--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.4",
+		"csv-parser": "^3.2.0",
 		"date-fns": "^3.6.0",
 		"lucide-react": "^0.469.0",
 		"mongodb": "^6.13.0",
