--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@tanstack/react-query": "^5.62.12",
 		"@tanstack/react-table": "^8.20.6",
 		"@tanstack/react-virtual": "^3.11.2",
+		"@vercel/analytics": "^1.5.0",
 		"@vercel/speed-insights": "^1.2.0",
 		"babel-plugin-react-compiler": "19.0.0-beta-27714ef-20250124",
 		"class-variance-authority": "^0.7.1",
